--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -413,7 +413,9 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		.domain(bounds)
 		.range(colorArray);
 
-	var keySize = {'height':mapHeight/2.5, 'width':mapWidth/50.7}
+	// var keySize = {'height':mapHeight/2.5, 'width':mapWidth/50.7}
+
+	var keySize = {'height':mapHeight/2.5, 'width':mapWidth/60.7}
 
 	var y = d3.scale.linear().domain([min*.95, max*1.05]).range([keySize.height, 0]);
     var axis = d3.svg.axis()
@@ -772,10 +774,10 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 			.attr("d",function(d) { d.line = this; return line(d.values); })
 			.attr("clip-path", 'url(#lineclip)');
 
-		d3.selectAll('.natLine').style('stroke', 'green')//forcing it to be green to fix the hidden bug
+		d3.selectAll('.natLine').style('stroke', 'rgb(100,100,100)')//forcing it to be black to fix the hidden bug
 
 
-		label.attr("transform", "translate(" + (liWidth-60) + "," + yScale(endofLine) + ")")
+		label.attr("transform", "translate(" + (liWidth-60) + "," + (yScale(endofLine) - liHeight*.05) + ")")
 			.attr('class', 'label')
 			.attr("text-anchor", "start")
 			.style("fill", "black")
