--- a/Ethiopia/onClickEthiopia.html
+++ b/Ethiopia/onClickEthiopia.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <head>
 <title>Ethiopia Price Monitor</title>
-<script src="libraries/d3.v3.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js" charset="utf-8"></script>
 <script src="libraries/topojson.v1.min.js"></script>
 <script src="libraries/queue.v1.min.js"></script>
 <script src="libraries/jquery-1.8.3.min.js"></script>
@@ -849,8 +849,9 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 	function mouseoverTown(d) {
 		//Histogram is highlighted only on mouseover so we don't have to worry about clicked state
 		var obs = d3.selectAll('.histDots').filter(function(e){return e.town === d.town}).size()
-		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.region === d.region}), function(g){return g.price}),2)
-		d3.selectAll('.histText').text(d.town + ", Avg. Price: " + d.price + " birr" + ", Region Avg.:" +meanPrice+ " birr," +'  obs.: ' + obs)
+		// var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.region === d.region}), function(g){return g.price}),2)
+		var stDev = d3.round(d3.deviation(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.town === d.town}), function(g){return g.price}),2)
+		d3.selectAll('.histText').text("Town: " + d.town + ", Mean: " + d.price + " birr" + ", SD: " +stDev+',  obs.: ' + obs)
 		d3.selectAll('.histDots').filter(function(e) {return e.town===d.town}).style('fill', 'red').attr({r: histDotRadius*1.5}).moveToFront()
 
 		//region map is highlighted only on mouseover so we don't have to worry about clicked state
@@ -881,7 +882,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		//hist
 		var obs = d3.selectAll('.histDots').size()
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
-		d3.selectAll('.histText').text(product + ", Avg. Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
+		var stDev = d3.round(d3.deviation(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
+		d3.selectAll('.histText').text(product + ", Mean: "+ meanPrice + " birr"+ ', SD: ' + stDev + ', Tot obs: ' + obs)
 		d3.selectAll('.histDots').filter(function(e) {return e.region===d.region}).style('fill', 'silver').attr({r: histDotRadius})
 		townTip.hide(d)
 
@@ -1004,7 +1006,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		//histogram
 		var obs = d3.selectAll('.histDots').filter(function(e){return e.region === d.properties.regionName}).size()
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.region === d.properties.regionName}), function(g){return g.price}),2)
-		d3.selectAll('.histText').text(d.properties.regionName+ ", Avg. Price: "+meanPrice+ " birr," +'  obs.: ' + obs)
+		var stDev = d3.round(d3.deviation(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate && e.region === d.properties.regionName}), function(g){return g.price}), 2)
+		d3.selectAll('.histText').text("Region: " + d.properties.regionName+ ", Mean: "+meanPrice+ " birr,"+'  SD: '+ stDev +',  obs.: ' + obs)
 		d3.selectAll('.histDots').filter(function(e) {return e.region === d.properties.regionName}).style('fill', 'red').attr({r: histDotRadius*1.5}).moveToFront()
 
 		//if lines are not active already then they are temporarily made active (will be changed back in mouseout if not an active state)
@@ -1036,7 +1039,8 @@ function drawMap(ethiopiaZones, ethiopiaRegions, townPriceData){
 		//histogram
 		var obs = d3.selectAll('.histDots').size()
 		var meanPrice = d3.round(d3.mean(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
-		d3.selectAll('.histText').text(product + ", Avg. Price: "+ meanPrice + " birr"+', Tot obs: ' + obs)
+		var stDev = d3.round(d3.deviation(townPriceData.filter(function(e){return e.item == product && e.date>= startDate && e.date <= endDate}), function(g){return g.price}),2)
+		d3.selectAll('.histText').text(product + ", Mean: "+ meanPrice + " birr"+ ', SD: ' + stDev + ', Tot obs: ' + obs)
 		d3.selectAll('.histDots').style('fill', 'silver').attr({r: histDotRadius})
 
 		regionTowns2.forEach(function(g){//make all non-active town lines transparent
@@ -1298,8 +1302,9 @@ function drawHistogram(townPriceData){
     //CREATING LABELS AND TEXT
     var totObs = data.length
     var meanPrice = d3.round(d3.mean(data, function(d){return d.price}), 2)
+    var stDev = d3.round(d3.deviation(data, function(d){return d.price}), 2)
   	var histText = histChart.append('text')
-    .text(product + ", Mean Price: "+ meanPrice + " birr"+ ', Tot obs: ' + totObs)
+    .text(product + ", Mean: "+ meanPrice + " birr"+ ', SD: ' + stDev + ', Tot obs: ' + totObs)
     .attr({
       x:-5*dotChartSeparation,
       y:0,
@@ -1355,7 +1360,8 @@ function drawHistogram(townPriceData){
 	    axisLine.call(axis)
 	    var totObs = data.length
 	    var meanPrice = d3.round(d3.mean(data, function(d){return d.price}), 2)
-	    histText.text(product + ", Mean Price: "+ meanPrice + " birr"+', Tot obs: ' + totObs)
+	    var stDev = d3.round(d3.deviation(data, function(d){return d.price}), 2)
+	    histText.text(product + ", Mean: "+ meanPrice + " birr"+ ', SD: ' + stDev + ', Tot obs: ' + totObs)
   	}
 }
 
